kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastify-api
  labels:
    name: fastify-api
